# neuralbook

./: .coverage  .coverage.claude.pid3.X6VzPNWx.Hl2lS8J568mh  .dockerignore  .env.example  .flake8  .gitignore  CONTRIBUTING.md  DOCKER.md  Dockerfile  LICENSE  MANIFEST.in  PYPI.md  README.md  REPO_CREATED.md  SECURITY.md  docker-compose.yml  pyproject.toml  render.yaml  requirements.txt
.github/workflows/: neuralbook-ci.yml  publish.yml  test.yml
.mypy_cache/3.9/: cache.db
.pytest_cache/v/cache/: nodeids
batch-build/: manifest.json  projects.json
docs/: API.md  ARCHITECTURE.md  GETTING_STARTED.md  NB-SPEC-1.0.md
examples/: 01_hello_world.py  02_api_server.py  03_batch_build.py  04_encryption.py  README.md
hello-world-build/: store.json
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_f652e2505546b35f___init___py.html  z_f652e2505546b35f_api_py.html  z_f652e2505546b35f_api_router_py.html  z_f652e2505546b35f_build_py.html  z_f652e2505546b35f_core_py.html  z_f652e2505546b35f_encryption_py.html  z_f652e2505546b35f_manifest_py.html
reports/: bandit_report.txt  bandit_report_after_update.txt  lint_report.txt  mypy_report_final.txt  outdated_packages.txt  safety_report.txt  test_coverage.txt  test_coverage_after_update.txt
schemas/: attestation.schema.json  manifest.schema.json  provenance.schema.json  revocations.schema.json  trusted_keys.schema.json
scripts/: neuralbook_build.py  neuralbook_init.py  release_to_pypi.py  verify_artifact_schemas.py  verify_provenance_gate.py  verify_release_key_policy.py
src/neuralbook/: __init__.py  api.py  api_router.py  build.py  cli.py  core.py  encryption.py  export.py  format.py  manifest.py  platform_api.py  trust.py
src/neuralbook.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: conftest.py  test_api.py  test_api_router.py  test_build.py  test_cli.py  test_core.py  test_encryption.py  test_export.py  test_format.py  test_manifest.py  test_platform_api.py
