[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neuralbook"
version = "1.0.0"
description = "Create encrypted, integrity-verified interactive digital books. Publish with confidence."
readme = "README.md"
license = "MIT"
authors = [
    {name = "NeuralBook Contributors", email = "hello@neuralbook.dev"},
]
maintainers = [
    {name = "NeuralBook Contributors", email = "hello@neuralbook.dev"},
]
keywords = [
    "encryption",
    "publishing",
    "digital-books",
    "security",
    "integrity",
    "cryptography",
    "aes-256-gcm",
    "content-creation",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Information Technology",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: News/Diary",
    "Topic :: Security :: Cryptography",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Markup",
]
requires-python = ">=3.9"
dependencies = [
    "cryptography==46.0.7",
    "pyyaml==6.0.1",
    "click==8.3.2",
    "markdown2==2.4.13",
]

[project.urls]
Homepage = "https://neuralbook.dev"
Documentation = "https://docs.neuralbook.dev"
Repository = "https://github.com/neuralbook/neuralbook"
"Bug Tracker" = "https://github.com/neuralbook/neuralbook/issues"
"Release Notes" = "https://github.com/neuralbook/neuralbook/releases"

[project.optional-dependencies]
dev = [
    "pytest==9.0.2",
    "pytest-cov==4.1.0",
    "black==24.4.2",
    "isort==5.13.2",
    "flake8==7.0.0",
    "mypy==1.10.0",
    "tox==4.15.1",
]
server = [
    "fastapi==0.136.0",
    "uvicorn==0.29.0",
    "pydantic>=2.9.0",
    "slowapi==0.1.9",
]
docker = [
    "docker==7.0.0",
]
all = [
    "pytest==9.0.2",
    "pytest-cov==4.1.0",
    "black==24.4.2",
    "isort==5.13.2",
    "flake8==7.0.0",
    "mypy==1.10.0",
    "fastapi==0.136.0",
    "uvicorn==0.29.0",
    "docker==7.0.0",
]

[project.scripts]
neuralbook = "neuralbook.cli:main"
neuralbook-api = "neuralbook.platform_api:start_server"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["neuralbook*"]
exclude = ["tests*"]

[tool.setuptools.package-data]
neuralbook = ["py.typed"]

[tool.black]
line-length = 100
target-version = ["py39"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100
py_version = 39

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=neuralbook --cov-report=term-missing"

[tool.coverage.run]
source = ["neuralbook"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "W503"]
